# memoir

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INTEGRATION.md  LICENSE  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
demo-memories/: MEMORY-code.md  MEMORY-philosophy.md  MEMORY.md  memoirs.yaml  triggers.md
demo-memories/archive/: INDEX.md
demo-memories/code/: functional-style.md  naming-things.md
demo-memories/core/: identity.md  relationships.md  values.md
demo-memories/philosophy/: absurdism.md  stoicism.md
memoir/: __init__.py  config.py
memoir/cli/: main.py
memoir/core/: __init__.py  archive.py  frontmatter.py  indexer.py  loader.py  triggers.py  weight.py
specs/: MEMOIR-SPEC.md
tests/: conftest.py  test_archive.py  test_frontmatter.py  test_indexer.py  test_loader.py  test_triggers.py  test_weight.py
