[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ksteam-memoir"
version = "0.1.3"
description = "Evolution-first memory framework for AI agents — memories that grow, mature, and fade"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "KSteam"},
]
keywords = ["memory", "agent", "llm", "filesystem", "markdown"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "ruamel.yaml>=0.18",
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
    "rapidfuzz>=3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[project.urls]
Homepage = "https://github.com/Sevan7-Kalo10/memoir"
Repository = "https://github.com/Sevan7-Kalo10/memoir"
Issues = "https://github.com/Sevan7-Kalo10/memoir/issues"

[project.scripts]
memoir = "memoir.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["memoir"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
